<resources>
    <string name="app_name">BTP project</string>
    <string name="articles">Articles</string>
    <string name="article">Article</string>
    <string name="materiel">Matériel</string>
    <string name="avancesEmploye">Avances Employé</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="employe">Employé</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_activity_liste_article">ListeArticleActivity</string>
    <string name="suiviJ">Suivi/J</string>
    <string name="lignesLot">Lignes</string>
    <string name="lignesSupp">Lignes Supp</string>
    <string name="qteRealise">Quantité réalisé</string>
    <string name="nbHTravaille">Nb H travaillé</string>
    <string name="mtPris">Montant pris</string>
    <string name="unite">Unité</string>
    <string name="quantite">Quantité</string>
    <string name="date">Date</string>
    <string name="prixDemande">Prix demandé</string>
    <string name="demandeDapproArticle">Demande appro articles</string>
    <string name="demandeApproPerson">Demande appro personnel</string>
    <string name="metier">Métier</string>
    <string name="dateD">Date début</string>
    <string name="dateF">Date fin</string>
    <string name="nbrEmp">Nombre employés</string>
    <string name="typeInterv">Type intervention</string>
    <string name="ligneLot">Ligne lot</string>
    <string name="quantitePrevue">Quantité prévue</string>
    <string name="nbHPrevues">Nb H prévues</string>
    <string name="pu">P.U</string>
    <string name="nom">Nom</string>
    <string name="ref">Référence</string>
    <string name="quantiteReceptionne">Quantité réceptionné</string>
    <string name="demandApproMateriel">Demande appro matériel</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="meschantier">Mes Chantiers</string>
    <string name="Avancement" >Avancement :</string>
    <string name="selectionDate">Selectionner une date</string>
    <string name="login">Login</string>
    <string name="description">Description</string>
    <string name="numero">N°</string>
    <string name="QteConsom">Quantité consommé</string>
</resources>
