<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Mon chantier"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navigation_suiviJ"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/suiviJ" />
    <item
        android:id="@+id/navigation_employe"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/employe" />
    <item
        android:id="@+id/navigation_article"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/article" />
    <item
        android:id="@+id/navigation_materiel"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/materiel" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />



</menu>
