<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ajoutLigneSuppBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:text="Ajouter une ligne"
        android:textColor="@color/design_default_color_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/textView14"
            app:fontFamily="sans-serif"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/description"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView15"
            app:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/numero"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView16"
            app:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Unité"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView17"
            app:fontFamily="sans-serif"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/qteRealise"
            android:textSize="14sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/ListeLigneSuppAjoutOT"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>