<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:text="Demander personnel"
            android:textColor="@color/design_default_color_background"
            android:textSize="22sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="MissingConstraints">


            <androidx.cardview.widget.CardView
                android:layout_width="329dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:longClickable="false"
                tools:layout_marginLeft="10dp">

                <LinearLayout
                    android:id="@+id/l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:paddingLeft="20dp"
                            android:text="@string/metier"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spinnerE"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:text="@string/dateD"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/dateDEmpBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:layout_marginRight="20dp"
                            android:background="@color/design_default_color_background"
                            android:drawableRight="@drawable/ic_date_range_orange_24dp"
                            android:text="Choisir une date"
                            android:textSize="8sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:text="@string/dateF"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/dateFEmpBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="20dp"
                            android:background="@color/design_default_color_background"
                            android:drawableRight="@drawable/ic_date_range_orange_24dp"
                            android:text="Choisir une date"
                            android:textSize="8sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/l1">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="20dp"
                            android:paddingLeft="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/nbr"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nbrEmp"
                                android:textSize="20dp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button"
                            android:layout_width="120dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/button"
                            android:text="Valider" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <!--app:navigationIcon="@drawable/menu" -->







    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>